--- a/Copia_de_AluraStoreLatam_Challegue1_Ciencia_de_datos_Edgar_Bernal.ipynb
+++ b/Copia_de_AluraStoreLatam_Challegue1_Ciencia_de_datos_Edgar_Bernal.ipynb
@@ -434,12 +434,59 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# 1. Asignar un identificador a cada DataFrame\n",
+        "tienda['ID_Tienda'] = 'Tienda 1'\n",
+        "tienda2['ID_Tienda'] = 'Tienda 2'\n",
+        "tienda3['ID_Tienda'] = 'Tienda 3'\n",
+        "tienda4['ID_Tienda'] = 'Tienda 4'\n",
+        "\n",
+        "# 2. Consolidar todos los DataFrames en uno solo\n",
+        "df_consolidado = pd.concat([tienda, tienda2, tienda3, tienda4], ignore_index=True)\n",
+        "\n",
+        "# 3. Limpieza y conversión de tipos de datos (Paso CLAVE para evitar errores)\n",
+        "# Forzar la conversión a numérico. 'errors=\"coerce\"' convierte cualquier valor no numérico a NaN.\n",
+        "df_consolidado['Precio'] = pd.to_numeric(df_consolidado['Precio'], errors='coerce')\n",
+        "df_consolidado['Costo de envío'] = pd.to_numeric(df_consolidado['Costo de envío'], errors='coerce')\n",
+        "\n",
+        "# Rellenar los valores NaN (producto de la coerción) con 0 antes de sumar.\n",
+        "df_consolidado['Precio'] = df_consolidado['Precio'].fillna(0)\n",
+        "df_consolidado['Costo de envío'] = df_consolidado['Costo de envío'].fillna(0)\n",
+        "\n",
+        "# 4. Calcular la Facturación (Ingreso Total por transacción)\n",
+        "# Facturación = Precio + Costo de envío\n",
+        "df_consolidado['Facturación'] = df_consolidado['Precio'] + df_consolidado['Costo de envío']\n",
+        "\n",
+        "# 5. Calcular el Ingreso Total agrupado por tienda\n",
+        "ingreso_total_por_tienda = df_consolidado.groupby('ID_Tienda')['Facturación'].sum().sort_values(ascending=False)\n",
+        "\n",
+        "print(\"--- Facturación (Ingreso Total) por Tienda ---\")\n",
+        "# Mostrar el resultado en un formato de moneda legible\n",
+        "print(ingreso_total_por_tienda.map('${:,.2f}'.format))"
+      ],
       "metadata": {
-        "id": "xykobSftV64I"
+        "id": "xykobSftV64I",
+        "outputId": "2aadcc7f-6a71-4a77-84d1-b9b09579e6cc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--- Facturación (Ingreso Total) por Tienda ---\n",
+            "ID_Tienda\n",
+            "Tienda 1    $1,212,258,300.00\n",
+            "Tienda 2    $1,175,828,600.00\n",
+            "Tienda 3    $1,156,536,200.00\n",
+            "Tienda 4    $1,093,693,100.00\n",
+            "Name: Facturación, dtype: object\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
