--- a/Copia_de_AluraStoreLatam_Challegue1_Ciencia_de_datos_Edgar_Bernal.ipynb
+++ b/Copia_de_AluraStoreLatam_Challegue1_Ciencia_de_datos_Edgar_Bernal.ipynb
@@ -471,7 +471,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -490,12 +490,41 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Calcular la facturación promedio (media) agrupada por 'Categoría del Producto'\n",
+        "facturacion_promedio_categoria = df_consolidado.groupby('Categoría del Producto')['Facturación'].mean().sort_values(ascending=False)\n",
+        "\n",
+        "print(\"--- 💰 Facturación Promedio por Categoría de Producto ---\")\n",
+        "# Usamos un formato de moneda para la salida\n",
+        "print(facturacion_promedio_categoria.map('${:,.2f}'.format))"
+      ],
       "metadata": {
-        "id": "KDyr8E71V3m-"
+        "id": "KDyr8E71V3m-",
+        "outputId": "e6c35b82-bbcb-41c3-c3ce-fb929b1612a6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--- 💰 Facturación Promedio por Categoría de Producto ---\n",
+            "Categoría del Producto\n",
+            "Electrodomésticos          $1,214,227.50\n",
+            "Electrónicos                 $987,042.10\n",
+            "Instrumentos musicales       $487,751.53\n",
+            "Muebles                      $423,176.78\n",
+            "Deportes y diversión         $135,372.24\n",
+            "Artículos para el hogar       $83,138.22\n",
+            "Juguetes                      $60,174.96\n",
+            "Libros                        $53,579.51\n",
+            "Name: Facturación, dtype: object\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
