--- a/Copia_de_AluraStoreLatam_Challegue1_Ciencia_de_datos_Edgar_Bernal.ipynb
+++ b/Copia_de_AluraStoreLatam_Challegue1_Ciencia_de_datos_Edgar_Bernal.ipynb
@@ -37,14 +37,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 100,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 293
         },
         "id": "T3EvaeQ_INIL",
-        "outputId": "9d26f576-1c82-4058-a715-39b68856f882"
+        "outputId": "32f8610a-26c5-4c98-d891-dc5801208e08"
       },
       "outputs": [
         {
@@ -74,7 +74,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0a3c360b-52c4-49a3-95d6-a866e4245482\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-62b5c9ab-4d2c-4a5f-9c80-67b99d643899\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -189,7 +189,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0a3c360b-52c4-49a3-95d6-a866e4245482')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-62b5c9ab-4d2c-4a5f-9c80-67b99d643899')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -241,12 +241,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-0a3c360b-52c4-49a3-95d6-a866e4245482 button.colab-df-convert');\n",
+              "        document.querySelector('#df-62b5c9ab-4d2c-4a5f-9c80-67b99d643899 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-0a3c360b-52c4-49a3-95d6-a866e4245482');\n",
+              "        const element = document.querySelector('#df-62b5c9ab-4d2c-4a5f-9c80-67b99d643899');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -266,8 +266,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-79f3b2d0-386f-4ca9-87f0-cb700f45ab3e\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-79f3b2d0-386f-4ca9-87f0-cb700f45ab3e')\"\n",
+              "    <div id=\"df-97ce74af-06e2-4827-8078-73c50cb2b07d\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-97ce74af-06e2-4827-8078-73c50cb2b07d')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -386,7 +386,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-79f3b2d0-386f-4ca9-87f0-cb700f45ab3e button');\n",
+              "            document.querySelector('#df-97ce74af-06e2-4827-8078-73c50cb2b07d button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -403,7 +403,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 100
         }
       ],
       "source": [
@@ -435,96 +435,47 @@
     {
       "cell_type": "code",
       "source": [
-        "# 1. Asignar un identificador a cada DataFrame\n",
-        "tienda['ID_Tienda'] = 'Tienda 1'\n",
-        "tienda2['ID_Tienda'] = 'Tienda 2'\n",
-        "tienda3['ID_Tienda'] = 'Tienda 3'\n",
-        "tienda4['ID_Tienda'] = 'Tienda 4'\n",
+        "# 1. Calcular el ingreso total para cada tienda (suma de la columna 'Precio')\n",
+        "ingreso_total_tienda1 = tienda['Precio'].sum()\n",
+        "ingreso_total_tienda2 = tienda2['Precio'].sum()\n",
+        "ingreso_total_tienda3 = tienda3['Precio'].sum()\n",
+        "ingreso_total_tienda4 = tienda4['Precio'].sum()\n",
         "\n",
-        "# 2. Consolidar todos los DataFrames en uno solo\n",
-        "df_consolidado = pd.concat([tienda, tienda2, tienda3, tienda4], ignore_index=True)\n",
-        "\n",
-        "# 3. Limpieza y conversión de tipos de datos (Paso CLAVE para evitar errores)\n",
-        "# Forzar la conversión a numérico. 'errors=\"coerce\"' convierte cualquier valor no numérico a NaN.\n",
-        "df_consolidado['Precio'] = pd.to_numeric(df_consolidado['Precio'], errors='coerce')\n",
-        "df_consolidado['Costo de envío'] = pd.to_numeric(df_consolidado['Costo de envío'], errors='coerce')\n",
-        "\n",
-        "# Rellenar los valores NaN (producto de la coerción) con 0 antes de sumar.\n",
-        "df_consolidado['Precio'] = df_consolidado['Precio'].fillna(0)\n",
-        "df_consolidado['Costo de envío'] = df_consolidado['Costo de envío'].fillna(0)\n",
-        "\n",
-        "# 4. Calcular la Facturación (Ingreso Total por transacción)\n",
-        "# Facturación = Precio + Costo de envío\n",
-        "df_consolidado['Facturación'] = df_consolidado['Precio'] + df_consolidado['Costo de envío']\n",
-        "\n",
-        "# 5. Calcular el Ingreso Total agrupado por tienda\n",
-        "ingreso_total_por_tienda = df_consolidado.groupby('ID_Tienda')['Facturación'].sum().sort_values(ascending=False)\n",
-        "\n",
-        "print(\"--- Facturación (Ingreso Total) por Tienda ---\")\n",
-        "# Mostrar el resultado en un formato de moneda legible\n",
-        "print(ingreso_total_por_tienda.map('${:,.2f}'.format))"
+        "# 2. Mostrar los resultados\n",
+        "print(f\"Ingreso Total Tienda 1: {ingreso_total_tienda1:,.1f}\")\n",
+        "print(f\"Ingreso Total Tienda 2: {ingreso_total_tienda2:,.1f}\")\n",
+        "print(f\"Ingreso Total Tienda 3: {ingreso_total_tienda3:,.1f}\")\n",
+        "print(f\"Ingreso Total Tienda 4: {ingreso_total_tienda4:,.1f}\")"
       ],
       "metadata": {
         "id": "xykobSftV64I",
-        "outputId": "2aadcc7f-6a71-4a77-84d1-b9b09579e6cc",
+        "outputId": "0cc7c092-7c7b-48dc-a502-3f89fc04a049",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--- Facturación (Ingreso Total) por Tienda ---\n",
-            "ID_Tienda\n",
-            "Tienda 1    $1,212,258,300.00\n",
-            "Tienda 2    $1,175,828,600.00\n",
-            "Tienda 3    $1,156,536,200.00\n",
-            "Tienda 4    $1,093,693,100.00\n",
-            "Name: Facturación, dtype: object\n"
+            "Ingreso Total Tienda 1: 1,150,880,400.0\n",
+            "Ingreso Total Tienda 2: 1,116,343,500.0\n",
+            "Ingreso Total Tienda 3: 1,098,019,600.0\n",
+            "Ingreso Total Tienda 4: 1,038,375,700.0\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Calcular la facturación promedio (media) agrupada por 'Categoría del Producto'\n",
-        "facturacion_promedio_categoria = df_consolidado.groupby('Categoría del Producto')['Facturación'].mean().sort_values(ascending=False)\n",
-        "\n",
-        "print(\"--- 💰 Facturación Promedio por Categoría de Producto ---\")\n",
-        "# Usamos un formato de moneda para la salida\n",
-        "print(facturacion_promedio_categoria.map('${:,.2f}'.format))"
-      ],
+      "source": [],
       "metadata": {
-        "id": "KDyr8E71V3m-",
-        "outputId": "e6c35b82-bbcb-41c3-c3ce-fb929b1612a6",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "KDyr8E71V3m-"
       },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--- 💰 Facturación Promedio por Categoría de Producto ---\n",
-            "Categoría del Producto\n",
-            "Electrodomésticos          $1,214,227.50\n",
-            "Electrónicos                 $987,042.10\n",
-            "Instrumentos musicales       $487,751.53\n",
-            "Muebles                      $423,176.78\n",
-            "Deportes y diversión         $135,372.24\n",
-            "Artículos para el hogar       $83,138.22\n",
-            "Juguetes                      $60,174.96\n",
-            "Libros                        $53,579.51\n",
-            "Name: Facturación, dtype: object\n"
-          ]
-        }
-      ]
+      "execution_count": 101,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -541,7 +492,7 @@
       "metadata": {
         "id": "A34YupIuYhfF"
       },
-      "execution_count": null,
+      "execution_count": 101,
       "outputs": []
     },
     {
@@ -550,7 +501,7 @@
       "metadata": {
         "id": "yZR6cOjXYSk1"
       },
-      "execution_count": null,
+      "execution_count": 101,
       "outputs": []
     },
     {
@@ -568,7 +519,7 @@
       "metadata": {
         "id": "bh3jjjJwY5MU"
       },
-      "execution_count": null,
+      "execution_count": 101,
       "outputs": []
     },
     {
@@ -577,7 +528,7 @@
       "metadata": {
         "id": "I0KkjPoTY88F"
       },
-      "execution_count": null,
+      "execution_count": 101,
       "outputs": []
     },
     {
@@ -595,7 +546,7 @@
       "metadata": {
         "id": "qoyjqijQZHfF"
       },
-      "execution_count": null,
+      "execution_count": 101,
       "outputs": []
     },
     {
@@ -604,7 +555,7 @@
       "metadata": {
         "id": "0Sw3sd4IZIGW"
       },
-      "execution_count": null,
+      "execution_count": 101,
       "outputs": []
     },
     {
@@ -622,7 +573,7 @@
       "metadata": {
         "id": "S2JeaCykZNy9"
       },
-      "execution_count": null,
+      "execution_count": 101,
       "outputs": []
     },
     {
@@ -631,7 +582,7 @@
       "metadata": {
         "id": "0tSdCie9ZQlt"
       },
-      "execution_count": null,
+      "execution_count": 101,
       "outputs": []
     }
   ]
