--- a/Copia_de_AluraStoreLatam_Challegue1_Ciencia_de_datos_Edgar_Bernal.ipynb
+++ b/Copia_de_AluraStoreLatam_Challegue1_Ciencia_de_datos_Edgar_Bernal.ipynb
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -454,7 +454,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -526,7 +526,7 @@
           "height": 607
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -579,7 +579,7 @@
         },
         "outputId": "dbbfeae1-d316-4922-ddc1-2eeea02c49a1"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -673,7 +673,7 @@
         },
         "outputId": "a2228b4a-d5be-46b8-9172-281b1ebaafe0"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -728,7 +728,7 @@
         },
         "outputId": "a356ab2a-4ec7-4dea-c46d-0f287d26b590"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -775,7 +775,7 @@
         },
         "outputId": "31d1437f-420a-4ce5-994d-d23ebad27612"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -828,7 +828,7 @@
         },
         "outputId": "f6341c9b-e9d8-4ca0-c2ed-5288abd1a66c"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -907,7 +907,7 @@
         },
         "outputId": "827955e6-f81c-4563-ff23-cb0d185e61f1"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -944,9 +944,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
-        "\n",
         "df_consolidado = pd.concat(tiendas, ignore_index=True)\n",
         "\n",
         "# 1. Agrupar y ordenar ventas\n",
@@ -963,14 +960,16 @@
         "df_pie = top_10.copy()\n",
         "df_pie.loc[len(df_pie)] = ['Otros Productos', ventas_otros]\n",
         "\n",
-        "# 4. Generación del Gráfico de Barras\n",
+        "# 4. Generación del Gráfico de Barras (CÓDIGO CORREGIDO)\n",
         "plt.figure(figsize=(12, 7))\n",
         "\n",
         "sns.barplot(\n",
         "    x='Cantidad de Transacciones',\n",
         "    y='Producto',\n",
         "    data=df_pie.sort_values(by='Cantidad de Transacciones', ascending=False),\n",
-        "    palette='viridis' # Paleta de colores para las barras\n",
+        "    palette='viridis',\n",
+        "    hue='Producto',       # <-- CORRECCIÓN: Asignamos la variable del eje 'y' a 'hue'\n",
+        "    legend=False          # <-- Y desactivamos la leyenda\n",
         ")\n",
         "\n",
         "# Configuración y etiquetas\n",
@@ -988,24 +987,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 736
+          "height": 649
         },
         "id": "FxWrjYlgKOc6",
-        "outputId": "9604c574-4b31-40ec-90fd-bb8581826f35"
+        "outputId": "531f7821-9da0-4f20-a0eb-473e51129cc8"
       },
-      "execution_count": 72,
+      "execution_count": 77,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-564549815.py:23: FutureWarning: \n",
-            "\n",
-            "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
-            "\n",
-            "  sns.barplot(\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -1061,7 +1049,7 @@
         },
         "outputId": "5cd60c6f-5265-45b4-faa9-099ebd6e442e"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1105,14 +1093,16 @@
         "    ascending=False\n",
         ").reset_index()\n",
         "\n",
-        "# --- 2. Generación del Gráfico de Barras ---\n",
+        "# --- 2. Generación del Gráfico de Barras (FIX) ---\n",
         "plt.figure(figsize=(10, 6))\n",
         "\n",
         "sns.barplot(\n",
         "    x='Tienda',\n",
         "    y='Costo_Envio_Promedio',\n",
         "    data=envio_promedio_por_tienda,\n",
-        "    palette='magma'\n",
+        "    palette='magma',\n",
+        "    hue='Tienda',       # <-- CORRECCIÓN: Asignar la variable a 'hue'\n",
+        "    legend=False        # <-- Y opcionalmente, remover la leyenda innecesaria\n",
         ")\n",
         "\n",
         "# Configuración y etiquetas\n",
@@ -1124,7 +1114,7 @@
         "# Añadir etiquetas de valor a las barras\n",
         "for index, row in envio_promedio_por_tienda.iterrows():\n",
         "    plt.text(row.name, row.Costo_Envio_Promedio + 100,\n",
-        "             f'${row.Costo_Envio_Promedio:,.0f}', # Muestra el valor en formato moneda\n",
+        "             f'${row.Costo_Envio_Promedio:,.0f}',\n",
         "             color='black', ha=\"center\", fontsize=10)\n",
         "\n",
         "plt.show()"
@@ -1133,23 +1123,12 @@
         "id": "0tSdCie9ZQlt",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 658
+          "height": 571
         },
-        "outputId": "58c6fa1d-9256-4aa9-fefe-0c47aaa6e12b"
+        "outputId": "37a06128-d4d3-4aee-acf0-49e2ac15ceb1"
       },
-      "execution_count": 74,
+      "execution_count": 78,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-1802793131.py:19: FutureWarning: \n",
-            "\n",
-            "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
-            "\n",
-            "  sns.barplot(\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
