--- a/Copia_de_AluraStoreLatam_Challegue1_Ciencia_de_datos_Edgar_Bernal.ipynb
+++ b/Copia_de_AluraStoreLatam_Challegue1_Ciencia_de_datos_Edgar_Bernal.ipynb
@@ -37,14 +37,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 121,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 293
         },
         "id": "T3EvaeQ_INIL",
-        "outputId": "14c18ffd-e810-48e8-d7a0-74506a8699f1"
+        "outputId": "3e5c3479-d770-46e7-b460-a786e502daac"
       },
       "outputs": [
         {
@@ -74,7 +74,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-fa75bc15-2592-4475-8884-77855b120a61\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-2a81c434-c594-4440-be8a-0c9a563fc501\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -189,7 +189,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fa75bc15-2592-4475-8884-77855b120a61')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2a81c434-c594-4440-be8a-0c9a563fc501')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -241,12 +241,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-fa75bc15-2592-4475-8884-77855b120a61 button.colab-df-convert');\n",
+              "        document.querySelector('#df-2a81c434-c594-4440-be8a-0c9a563fc501 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-fa75bc15-2592-4475-8884-77855b120a61');\n",
+              "        const element = document.querySelector('#df-2a81c434-c594-4440-be8a-0c9a563fc501');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -266,8 +266,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-ce6ba81d-ecc9-4279-acc6-4b78725905ad\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ce6ba81d-ecc9-4279-acc6-4b78725905ad')\"\n",
+              "    <div id=\"df-7dcecb0e-9879-4a46-bdfa-032083b1f66a\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7dcecb0e-9879-4a46-bdfa-032083b1f66a')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -386,7 +386,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-ce6ba81d-ecc9-4279-acc6-4b78725905ad button');\n",
+              "            document.querySelector('#df-7dcecb0e-9879-4a46-bdfa-032083b1f66a button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -403,7 +403,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 121
         }
       ],
       "source": [
@@ -428,11 +428,144 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#1. Análisis de facturación\n",
-        "\n"
+        "#### ----- Limpieza de datos ----"
       ],
       "metadata": {
-        "id": "X62IW3KFUIYm"
+        "id": "Ol74YpwSTlzi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "todas_las_tiendas = [tienda, tienda2, tienda3, tienda4]\n",
+        "df_consolidado = pd.concat(todas_las_tiendas, ignore_index=True)\n",
+        "\n",
+        "print(\"--- 🔢 Conteo de Valores Nulos por Columna ---\")\n",
+        "nulos_conteo = df_consolidado.isnull().sum()\n",
+        "nulos_porcentaje = (nulos_conteo / len(df_consolidado)) * 100\n",
+        "\n",
+        "df_nulos = pd.DataFrame({\n",
+        "    'Total Nulos': nulos_conteo,\n",
+        "    'Porcentaje (%)': nulos_porcentaje.round(2)\n",
+        "})\n",
+        "\n",
+        "# Filtrar solo las columnas que tienen al menos un valor nulo\n",
+        "df_nulos = df_nulos[df_nulos['Total Nulos'] > 0].sort_values(by='Total Nulos', ascending=False)\n",
+        "\n",
+        "if df_nulos.empty:\n",
+        "    print(\"\\n✅ ¡No se encontraron valores nulos en el DataFrame consolidado!\")\n",
+        "else:\n",
+        "    print(df_nulos.to_markdown())"
+      ],
+      "metadata": {
+        "id": "NUKuzTgDTsgx",
+        "outputId": "08e59ad4-d055-4f82-85a0-3ccbf4915d2b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 122,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--- 🔢 Conteo de Valores Nulos por Columna ---\n",
+            "\n",
+            "✅ ¡No se encontraron valores nulos en el DataFrame consolidado!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "dMbmJQpFUM25"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### ----- Remover registros inconsistentes -----"
+      ],
+      "metadata": {
+        "id": "nlmWEXGuUM4O"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#  Contar las filas ANTES de la limpieza\n",
+        "registros_antes = len(df_consolidado)\n",
+        "\n",
+        "#  Remoción de Precios iguales a 0 (Valor de alquiler = 0) ---\n",
+        "# Usamos el método .query() para seleccionar solo las filas donde el 'Precio' es mayor que 0.\n",
+        "df_limpio = df_consolidado.query('Precio > 0').copy()\n",
+        "\n",
+        "#  Contar las filas después de la primera remoción\n",
+        "registros_despues_precio = len(df_limpio)\n",
+        "registros_eliminados_precio = registros_antes - registros_despues_precio\n",
+        "\n",
+        "#  Remoción de Costo de Envío iguales a 0 (Condominio = 0) ---\n",
+        "#  Eliminamos las filas donde el 'Costo de envío' es 0 del DataFrame ya filtrado (df_limpio)\n",
+        "df_limpio = df_limpio.query('`Costo de envío` > 0').copy()\n",
+        "\n",
+        "#  Contar las filas finales\n",
+        "registros_finales = len(df_limpio)\n",
+        "registros_eliminados_total = registros_antes - registros_finales\n",
+        "\n",
+        "print(\"--- 🗑️ Limpieza de Registros Inconsistentes ---\")\n",
+        "print(f\"Registros iniciales: {registros_antes}\")\n",
+        "print(f\"Registros con Precio = 0 eliminados: {registros_eliminados_precio}\")\n",
+        "print(f\"Registros con Costo de envío = 0 eliminados (adicionalmente): {registros_despues_precio - registros_finales}\")\n",
+        "print(f\"-------------------------------------------------\")\n",
+        "print(f\"Registros finales en el DataFrame: {registros_finales}\")\n",
+        "print(f\"Total de registros eliminados: {registros_eliminados_total}\")\n",
+        "\n",
+        "# Sobreescribimos el DataFrame consolidado con la versión limpia para continuar el análisis\n",
+        "df_consolidado = df_limpio"
+      ],
+      "metadata": {
+        "id": "myb1D9l-UVUw",
+        "outputId": "e8ebd5c7-8398-408a-88e0-bb0f1a327193",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 123,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--- 🗑️ Limpieza de Registros Inconsistentes ---\n",
+            "Registros iniciales: 9435\n",
+            "Registros con Precio = 0 eliminados: 0\n",
+            "Registros con Costo de envío = 0 eliminados (adicionalmente): 827\n",
+            "-------------------------------------------------\n",
+            "Registros finales en el DataFrame: 8608\n",
+            "Total de registros eliminados: 827\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 1. Análisis con facturación"
+      ],
+      "metadata": {
+        "id": "FF4ALA63WmgE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Ingresos por tiendas"
+      ],
+      "metadata": {
+        "id": "S53Am_MibP5C"
       }
     },
     {
@@ -452,12 +585,12 @@
       ],
       "metadata": {
         "id": "xykobSftV64I",
-        "outputId": "72940c7f-9572-467b-979e-4c0e03c2b840",
+        "outputId": "04ffbb27-fe97-4cb6-9015-1adc8e7c0f25",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "stream",
@@ -535,13 +668,13 @@
       ],
       "metadata": {
         "id": "KDyr8E71V3m-",
-        "outputId": "557e9660-2386-450b-dd7f-e6ffb5249505",
+        "outputId": "feaff61a-4dfc-43ab-b2a3-bd779d4f2dd1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
         }
       },
-      "execution_count": 52,
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "display_data",
@@ -583,12 +716,12 @@
       ],
       "metadata": {
         "id": "1MKKXHjvjuA-",
-        "outputId": "ab353070-1ea5-4d16-9f54-2bba6b48fe58",
+        "outputId": "8ac2020b-f72b-4a0c-c278-aa7433df2237",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 51,
+      "execution_count": 126,
       "outputs": [
         {
           "output_type": "stream",
@@ -707,9 +840,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "1b8cd68d-2df6-4a78-8089-69fe654f55d1"
+        "outputId": "e54ce5e9-9485-415b-f678-da786505b113"
       },
-      "execution_count": 42,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "display_data",
@@ -766,9 +899,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "59dc6d1c-5765-4cab-a0f2-c6393dda3156"
+        "outputId": "4b7841a1-ea10-4ba2-c074-46d4bd02ca91"
       },
-      "execution_count": 43,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "stream",
@@ -864,13 +997,13 @@
       ],
       "metadata": {
         "id": "I0KkjPoTY88F",
-        "outputId": "87817b10-f581-4546-f8a9-264fb2e016f7",
+        "outputId": "51fcf49e-d2cd-46b0-914f-00e1aaa87a45",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
         }
       },
-      "execution_count": 44,
+      "execution_count": 129,
       "outputs": [
         {
           "output_type": "display_data",
@@ -920,12 +1053,12 @@
       ],
       "metadata": {
         "id": "qoyjqijQZHfF",
-        "outputId": "17340bd3-083d-4672-9f72-a3ab7dae10c3",
+        "outputId": "51e28ce9-8fba-401e-e00e-2e8bcab16d4b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 50,
+      "execution_count": 130,
       "outputs": [
         {
           "output_type": "stream",
@@ -1103,13 +1236,13 @@
       ],
       "metadata": {
         "id": "FxWrjYlgKOc6",
-        "outputId": "36d666a8-13e5-4836-afb4-80459d0eb88d",
+        "outputId": "32ffb416-ea40-4354-aec3-85bce299d977",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 779
         }
       },
-      "execution_count": 46,
+      "execution_count": 131,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1170,12 +1303,12 @@
       ],
       "metadata": {
         "id": "S2JeaCykZNy9",
-        "outputId": "2d22225a-bd71-4f58-fb8a-b5c096af4bda",
+        "outputId": "3c1df5be-02e0-43f4-c5aa-699a33dcb9d5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 47,
+      "execution_count": 132,
       "outputs": [
         {
           "output_type": "stream",
@@ -1255,13 +1388,13 @@
       ],
       "metadata": {
         "id": "0tSdCie9ZQlt",
-        "outputId": "c042e122-b753-4609-ecaf-ff9139753cb9",
+        "outputId": "3bc45f87-71d0-496c-d31b-d54b66c834bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
         }
       },
-      "execution_count": 48,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1274,6 +1407,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Análisis de desempeño geográfico"
+      ],
+      "metadata": {
+        "id": "mI5wfiXEbZ-J"
+      }
     }
   ]
 }
